@@ -1,3 +1,9 @@
+2010-06-18  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+
+	* gdb.base/gdb11531.exp: Respect gdb,no_hardware_watchpoints flag.
+	* gdb.base/watch-cond.exp: Likewise.
+	* gdb.python/py-breakpoint.exp: Likewise.
+
 2010-06-18  Pedro Alves  <pedro@codesourcery.com>
 
 	* gdb.multi/base.exp, gdb.multi/bkpt-multi-exec.exp: Use
